# motion-k

./: .gitignore  Cargo.toml
src/: main.rs  sequence.rs
src/attributes/: attribute.rs  interpolated_attribute.rs  mod.rs  static_attribute.rs  type_extensions.rs
src/elements/: element.rs  line.rs  mod.rs  shape.rs
src/geo/: io.rs  map_generator.rs  map_io.rs  mod.rs  pos_builder.rs  style.rs
src/motion_graphics/: mod.rs  sequence.rs
src/motion_graphics/attributes/: attribute.rs  interpolated_attribute.rs  static_attribute.rs  type_extensions.rs
src/motion_graphics/elements/: element.rs  line.rs  mod.rs  rectangle.rs  shape.rs
src/ui/: window.rs
